kubernetes/apps/home-automation/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        nfsMount: "true"
    spec:
      volumes:
      - name: unraid-storage
        persistentVolumeClaim:
          claimName: unraid-un-nvme-pvc
      - name: ssh-secret
        secret:
          secretName: ssh-secret-pi-screen
      hostNetwork: false
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:2025.1.2
        volumeMounts:
        - mountPath: "/config"
          subPath: home_assistant
          name: unraid-storage
        - name: ssh-secret
          mountPath: /root/read-only-ssh/
        ports:
        - containerPort: 8123
        - containerPort: 1400
        command: ["/bin/sh", "-c"]
        args:
          - mkdir /root/.ssh/ &&
            cp /root/read-only-ssh/* /root/.ssh/ &&
            chmod 600 /root/.ssh/id_rsa &&
            /init
