kubernetes/apps/home-automation/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  selector:
    app: home-assistant
  type: LoadBalancer
  ports:
  - name: webui
    protocol: TCP
    port: 8123
    targetPort: 8123
