kubernetes/apps/home-automation/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: home-assistant-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.tnorbert.com"
spec:
  ingressClassName: external
  rules:
  - host: ha.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: home-assistant-internal
spec:
  ingressClassName: internal
  rules:
  - host: ha.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-sonos-metallb
  namespace: home-automation
  annotations:
    metallb.universe.tf/allow-shared-ip: local
spec:
  selector:
    app: home-assistant
  ports:
    - port: 1400
      targetPort: 1400
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.0.0.22
